Fixed searchbar and submit button alignment issues

--- a/src/Components/Styles/searchbar.css
+++ b/src/Components/Styles/searchbar.css
@@ -17,4 +17,13 @@ input {
   height: 2.5em;
   padding: 1em;
   font-size: 1.5em;
+  line-height: normal;
+  vertical-align: middle;
+}
+.searchSubmit {
+  height: 3.5em;
+  width: 3.5em;
+  font-size: 1em;
+  padding: 0;
+  line-height: normal;
 }
